assets/scss/components/notes_md.scss
.previewClickable {
  :hover {
    background-color: #f5f5f6;
  }
  transition-duration: 100ms !important;
}
::-webkit-scrollbar {
  height: 10px;
}

::-webkit-scrollbar-thumb {
  background: rgba(90, 90, 90, 0.5);
  border-radius: 15px !important;
}

::-webkit-scrollbar-track {
  background: rgba(90, 90, 90, 0.1);
  border-radius: 15px !important;
}
.title-content {
  margin-left: 10%;
}
@media only screen and (max-width: 768px) {
  .title-content {
    margin-left: 0%;
  }
}
.flux-image {
  background-position: 0px 0px !important;
  background-size: auto 100% !important;
  background-color: black;
  background-position: center !important;
}

.md-container {
  font-family: 'Quicksand', sans-serif !important;
  word-wrap: break-word;

  img {
    margin-top: 2rem;
    margin-bottom: 2rem;
  }
  b 
  {
    font-weight: bold !important;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-family: 'ginger-bold', 'Trebuchet MS', 'Lucida Sans Unicode',
      'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
    font-weight: 200 !important;
    margin-bottom: 2rem !important;
  }
  p {
    margin-bottom: 2rem !important;
    font-weight: 500 !important;
  }

  blockquote {
    margin-left: -10px !important;
    padding-left: 23px !important;
    box-shadow: rgb(41, 41, 41) 3px 0px 0px 0px inset !important;
    p {
      font-style: italic !important;
    }
  }
  pre > code {
    margin-bottom: 2rem !important;
    background-color: #eeeeee;
    border-radius: 0.5rem;
    padding: 1rem;
  }

  ul {
    list-style-type: disc !important;
  }
  ol {
    list-style-type: symbols !important;
  }

  ul,
  ol {
    li {
      font-weight: 500 !important;
    }
    margin-left: 2rem;
    margin-bottom: 1rem;
    p {
      margin-bottom: 0.5rem !important;
    }
    ol {
      list-style-type: lower-roman !important;
    }
    ul {
      list-style-type: circle !important;
    }
    ul,
    ol {
      ul {
        list-style-type: square !important;
      }
      ol {
        list-style-type: lower-alpha !important;
      }
    }
  }
}
.background-cover {
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

